add overlay support
