# swagger.yml
@@ -153,10 +153,18 @@ definitions:
       - lower
     properties:
       # internal
+      id:
+        type: integer
+        format: int64
+        readOnly: true
       mountpoint:
         type: string
         readOnly: true
       workdir:
+        type: string
+        readOnly: true
+      upperdir:
+        description:  currently, upperdir is always a directory in mountDir
         type: string
         readOnly: true
       ref:
@@ -165,14 +173,10 @@ definitions:
         readOnly: true
       # external
       lower:
-        type: integer #id
-        format: int64
-      uppers:
-        description: |
-          This array of RBD ID's is interpreted in order, and will be layered in the order provided.
+        description: This is an array of RBD IDs, interpreted in order for multiple lower dirs. At least one must be specified.
         type: array
         items:
-          type: integer #id
+          type: integer
           format: int64
 
 
@@ -367,11 +371,11 @@ paths:
           schema:
             $ref: "#/definitions/error"
 
-  /mount/overlay/{lower}:
+  /mount/overlay/{id}:
     parameters:
       - type: integer
         format: int64
-        name: lower
+        name: id
         in: path
         required: true
     get:
